--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,6 +54,10 @@ react {
     autolinkLibrariesWithApp()
 }
 
+project.ext.react=[
+    enableHermes:true
+]
+
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
@@ -102,6 +106,7 @@ android {
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
+            minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
