--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,14 +54,12 @@ react {
     autolinkLibrariesWithApp()
 }
 
-project.ext.react=[
-    enableHermes:true
-]
-
+ 
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
+ 
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -89,6 +87,11 @@ android {
         versionCode 1
         versionName "1.0"
     }
+     packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
+    }
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -105,8 +108,7 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
-            minifyEnabled enableProguardInReleaseBuilds
-            minifyEnabled true
+            minifyEnabled  true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
